# SmartClinicAgent

./: .env.example  .gitignore  Makefile  README.md  check.py  main.py  pyproject.toml  requirements.txt  setup.cfg
src/agent/: __init__.py  agent.py  base_agent.py  context.py  graph.py  hitl.py  llm.py  prompt.py  requirements.txt  schema.py  setting.py  tool_retriever.py  tools_calendar.py  utils.py
src/agent/core/: __init__.py  calendar_service.py  email_service.py  template_email.py
src/agent/docs/: faq.md
src/agent/memory/: __init__.py  client.py
src/agent/model/: __init__.py  models_email.py
src/agent/tools/: __init__.py  helper.py  schema.py  tool_retriever.py  tools_calendar.py
