[project]
name = "smartclinicagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu==1.11.0.post1",
    "fastembed==0.7.1",
    "google-ai-generativelanguage==0.6.15",
    "langchain-community==0.3.27",
    "langchain[google-genai]==0.3.27",
    "langgraph==0.6.4",
    "langgraph-cli[inmem]>=0.3.6",
    "loguru==0.7.3",
    "markdown>=3.8.2",
    "mem0ai>=0.1.116",
    "pydantic-settings==2.10.1",
    "pylint>=3.3.8",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "ruff>=0.12.9",
    "unstructured==0.18.11",
]

[tool.ruff]
line-length = 220

[tool.ruff.lint]
select = ["E501", "I"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
